2006-02-7  Behdad Esfahbod  <behdad@gnome.org>

	* bprobe.py: Do not try to unlink if the file is not there.

	* probes/fontconfig.probe: Link to fontconfig, as we call
	FcPatternPrint directly.

2006-02-7  Behdad Esfahbod  <behdad@gnome.org>

	* Initial import.